# ACHChaosMonkey

./: .gitignore  README.md  pyproject.toml  requirements.txt
achchaosmonkey/: main.py  settings.py
achchaosmonkey/api/: deps.py  schemas.py
achchaosmonkey/api/routers/: generation.py  io.py  validation.py
achchaosmonkey/db/: base.py  ingest.py  models.py
achchaosmonkey/generator/: builder.py  chaos.py  profiles.py
achchaosmonkey/generator/strategies/: __init__.py  fraud.py  miscode.py
achchaosmonkey/io/: csv_io.py  excel_io.py  nacha_io.py
achchaosmonkey/ml/: train.py
achchaosmonkey/nacha/: checksum.py  exceptions.py  fields.py  parser.py  records.py  writer.py
achchaosmonkey/ui/: app.py
achchaosmonkey/ui/components/: risk_badge.py  tables.py
achchaosmonkey/ui/pages/: dashboard.py  generate.py  io_page.py  transactions.py  validate.py
achchaosmonkey/validator/: anomaly.py  evaluation.py  features.py  risk.py  structural.py
scripts/: seed_demo_data.py
tests/: conftest.py  test_anomaly_model.py  test_api_e2e.py  test_api_generation.py  test_api_io.py  test_api_validation.py  test_checksum.py  test_evaluation.py  test_fraud_strategies.py  test_generator.py  test_io_roundtrip.py  test_nacha_parser.py  test_nacha_writer.py  test_roundtrip.py  test_validator_rules.py
