[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "achchaosmonkey"
version = "0.1.0"
description = "ACH chaos-monkey generator, NACHA/fraud validator, and NiceGUI management console"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "nicegui>=1.4",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "joblib>=1.3",
    "faker>=24.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["achchaosmonkey*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
